Finallize project
